# geodjango-com-multiplos-bancos

./: .flake8  Procfile  manage.py  migrate.sh  pyproject.toml  requirements.txt  setup.sh
core/: admin.py  forms.py  models.py  urls.py  views.py
core/api/: serializers.py  urls.py  views.py
core/fixtures/: cities.json
core/migrations/: 0001_initial.py  0002_auto_20210411_2209.py  0003_marketplace_quantity.py  0004_alter_seller_city.py  0005_auto_20210413_1526.py  0006_auto_20210416_0434.py
geo_app/: admin.py  facade.py  models.py
geo_app/fixtures/: municipios.json
geo_app/migrations/: 0001_initial.py  0002_alter_municipiosibge_options.py
offer_map/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base_unauth.html  home.html
templates/core/: dashboard.html  map.html  mapa.html
templates/core/marketplace/: create.html  form.html
templates/dashboard/: base.html  footer.html  sidebar.html  top_navigation.html
templates/users/: login.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py
